# AlcoholLabelValidator

./: .env.example  .gitignore  README.md  pyproject.toml  run.ps1  run.sh
backend/app/: analysis.py  intake_jobs.py  main.py  models.py  store.py  vision.py
backend/tests/: test_flow.py
docs/: AI_USE.md  ARCHITECTURE.md  ASSUMPTIONS.md  EVALUATION.md
fixtures/evaluation-real/: README.md  real-bottle-evaluation-batch.json  single-submission-canada.json
fixtures/intake/: sample-attention-back.png.ocr.txt  sample-attention-front.png.ocr.txt  sample-compliant-front.png.ocr.txt  sample-distilled-spirits-batch.json
fixtures/intake/user/: README.md  batch-submission.json.example  single-submission.json.example
portals/officer/: package-lock.json  package.json
portals/officer/src/: main.tsx  styles.css
scripts/: check_fixtures.py  evaluate.py  generate_demo_images.py  prepare_models.py  run_batch_test.py
