[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "alcohol-label-validator"
version = "0.1.0"
description = "Human-in-the-loop alcohol label verification prototype"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"
